Revert "added colors to the log messeges"